kube/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rocket-fuel
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: rocket-fuel
    team: "rocket"
spec:
  tls:
    - hosts:
        - fuel.fnox.se
      secretName: fnox.se
  rules:
    - http:
        paths:
          - path: /api
            backend:
              serviceName: rocket-fuel
              servicePort: 8080
          - path: /
            backend:
              serviceName: rocket-fuel
              servicePort: 80
      host: fuel.fnox.se
